--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -6,19 +6,19 @@
 			 <form>
 				 <div class="form-row">
 				   <div class="form-group col-md-6">
-					 <label for="inputEmail4">Email</label>
-					 <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+					 <label for="inputEmail4">Name</label>
+					 <input type="name" class="form-control" id="inputName" placeholder="Enter Name">
 				   </div>
 				   <div class="form-group col-md-6">
-					 <label for="inputPassword4">Password</label>
-					 <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+					 <label for="inputPassword4">Email</label>
+					 <input type="email" class="form-control" id="inputemail" placeholder="Enter Email">
 				   </div>
 				 </div>
 				 <div class="form-group">
-				   <label for="inputAddress">Address</label>
-				   <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+				   <label for="inputAddress">Feedbaack</label>
+				   <input type="text" class="form-control" id="inputAddress" placeholder="what do you think about our web app let us known here...">
 		 
-				 <button type="submit" class="btn btn-primary">Sign in</button>
+				 <button type="submit" class="btn btn-primary">Submit</button>
 			   </form>
 		 </div>
 
