--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
   <title>{% block title %} QR Code Generator {% endblock title %}  </title>
 </head>
 <div class="background-image">
@@ -26,8 +27,12 @@
         </ul>
 </div >
 </div>
-<div class="navbar">
-  <div class="navbar-logo"><img src="/static/Prashant_youtube.png" alt="Your logo"></div>
+<div class="navbar" style="position: fixed;">
+  <div class="navbar-logo">
+    <a href="{{ url_for('index') }}">
+      <img src="{{ url_for('static', filename='logo.png') }}" alt="Your Logo"> QR Code Generator 
+  </a>
+  </div>
   <div class="a-tags">
       <a href="#home">Home</a>
       <a href="#about">About</a>
